--- a/Multi-TCG-Deckbuilder/Dialogs/AdvancedSearch.xaml
+++ b/Multi-TCG-Deckbuilder/Dialogs/AdvancedSearch.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="Multi_TCG_Deckbuilder.AdvancedSearch"
+﻿<Window x:Class="Multi_TCG_Deckbuilder.Dialogs.AdvancedSearch"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Multi_TCG_Deckbuilder"
+        xmlns:local="clr-namespace:Multi_TCG_Deckbuilder.Dialogs"
         xmlns:plugin="clr-namespace:IGamePlugInBase;assembly=IGamePlugInBase"
         mc:Ignorable="d" Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}"
         Title="Advanced Search" Height="auto" Width="300" MinWidth="300" MaxWidth="300"
