--- a/Multi-TCG-Deckbuilder/LoadPlugin.xaml
+++ b/Multi-TCG-Deckbuilder/LoadPlugin.xaml
@@ -38,6 +38,9 @@
                 <MenuItem Header="_Check Plug-In Updates"/>
                 <MenuItem Header="_Check Application Updates"/>
             </MenuItem>
+            <MenuItem Header="_About">
+                <MenuItem Header="_About Multi-TCG Deck Builder" Click="MenuItem_ProgramAbout_Click" />
+            </MenuItem>
         </Menu>
         <ListBox Grid.Row="1" x:Name="listBox_GameList" d:ItemsSource="{d:SampleData ItemCount=5}" Background="{DynamicResource {x:Static SystemColors.WindowBrushKey}}"
                  Height="auto" Width="auto" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Margin="0,0,0,0"
