Move FECipher Plug-In to separate Repository.

--- a/Multi-TCG-Deckbuilder/DeckBuilder.xaml
+++ b/Multi-TCG-Deckbuilder/DeckBuilder.xaml
@@ -71,8 +71,8 @@
                 <MenuItem Header="_Open" InputGestureText="Ctrl+O" Command="Open"/>
                 <MenuItem x:Name="MenuItem_Import" Header="_Import"/>
                 <MenuItem x:Name="MenuItem_Export" Header="_Export">
-                    <MenuItem Header="_Image" Click="MenuItem_ExportImage_Click"/>
-                    <MenuItem Header="_TableTop Simulator" Click="MenuItem_TableTop_Click"/>
+                    <MenuItem Header="_To Image" Click="MenuItem_ExportImage_Click"/>
+                    <MenuItem Header="_To Tabletop Simulator" Click="MenuItem_TableTop_Click"/>
                 </MenuItem>
                 <MenuItem Header="_Save" InputGestureText="Ctrl+S" Command="Save"/>
                 <MenuItem Header="_Save As" InputGestureText="Ctrl+Shift+S" Command="SaveAs"/>
