--- a/Multi-TCG-Deckbuilder/LoadPlugin.xaml
+++ b/Multi-TCG-Deckbuilder/LoadPlugin.xaml
@@ -22,7 +22,7 @@
             <RowDefinition Height="20"/>
             <RowDefinition Height="198.5*"/>
             <RowDefinition Height="198.5*"/>
-            <RowDefinition Height="37*"/>
+            <RowDefinition Height="37"/>
         </Grid.RowDefinitions>
         <Menu>
             <MenuItem Header="_File">
@@ -104,6 +104,7 @@
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
+        <TextBlock x:Name="text_Description" Margin="10,0,0,0" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Row="3" Text="{Binding SelectedValue.Description,ElementName=listBox_FormatList}"/>
         <Button x:Name="button_Select" Content="OK" HorizontalAlignment="Right" Margin="0,7,55,0" Grid.Row="3" VerticalAlignment="Top" Height="20" Width="40" Command="New"/>
         <Button x:Name="button_Cancel" Content="Cancel" HorizontalAlignment="Right" Margin="0,7,10,0" Grid.Row="3" VerticalAlignment="Top" Height="20" Width="40" Click="button_Cancel_Click"/>
     </Grid>
