Handling for Unable to Download

--- a/Multi-TCG-Deckbuilder/DeckBuilder.xaml
+++ b/Multi-TCG-Deckbuilder/DeckBuilder.xaml
@@ -16,11 +16,11 @@
         <convert:DeckBoxHeightConverter x:Key="DeckBoxHeightConverter" />
         <DataTemplate x:Key="ImageControl_Results" DataType="{x:Type model:CardModel}">
             <Image Source="{Binding FullPath}" Width="auto" Height="auto" HorizontalAlignment="Stretch" VerticalAlignment="Top" Margin="0,0,0,0"
-                   MouseRightButtonDown="ImageCardSearch_MouseRightDown" MouseMove="ImageCardSearch_MouseMove" />
+                   MouseRightButtonDown="ImageCardSearch_MouseRightDown" MouseMove="ImageCardSearch_MouseMove" ImageFailed="Image_ImageFailed" />
         </DataTemplate>
         <DataTemplate x:Key="ImageControl_Deck" DataType="{x:Type model:CardModel}">
             <Image Source="{Binding FullPath}" Width="auto" Height="auto" HorizontalAlignment="Stretch" VerticalAlignment="Top" Margin="0,0,0,0"
-                       MouseRightButtonDown="ImageCardDeck_MouseRightDown" MouseMove="ImageCardDeck_MouseMove"
+                       MouseRightButtonDown="ImageCardDeck_MouseRightDown" MouseMove="ImageCardDeck_MouseMove" ImageFailed="Image_ImageFailed" 
                        Tag="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ListBox}}, Path=Tag}"/>
         </DataTemplate>
         <DrawingImage x:Key="FilterImage">
@@ -40,6 +40,29 @@
                 <DrawingGroup ClipGeometry="M0,0 V110.668 H122.88 V0 H0 Z">
                     <DrawingGroup Opacity="1">
                         <GeometryDrawing Brush="#FF000000" Geometry="F0 M122.88,110.668z M0,0z M91.124,15.645C104.052,15.645 114.53,26.124 114.53,39.051 114.53,51.978 104.051,62.457 91.124,62.457 78.197,62.457 67.718,51.978 67.718,39.051 67.718,26.125 78.197,15.645 91.124,15.645L91.124,15.645z M2.756,0L120.078,0C121.626,0 122.88,1.254 122.88,2.802 122.88,3.65 122.512,4.424 121.884,4.941L111.217,18.497C109.812,17.122,108.267,15.89,106.603,14.825L113.231,5.605 9.43,5.605 47.405,51.776C47.995,52.292,48.363,53.03,48.363,53.878L48.363,103.026 69.419,93.403 69.419,57.896C71.07,59.796,72.967,61.478,75.061,62.892L75.061,95.025C75.061,96.13,74.434,97.089,73.475,97.531L46.999,110.289C45.672,111.062 43.976,110.621 43.201,109.256 42.943,108.815 42.833,108.336 42.833,107.856L42.833,55.02 0.803,4.756C-0.267,3.65 -0.267,1.917 0.803,0.811 1.355,0.258 2.056,0 2.756,0L2.756,0z M96.93,28.282C98.258,26.933 100.419,26.927 101.755,28.269 103.09,29.611 103.096,31.793 101.768,33.141L95.939,39.055 101.775,44.974C103.092,46.312 103.074,48.48 101.735,49.817 100.395,51.153 98.242,51.15 96.925,49.811L91.128,43.933 85.321,49.822C83.992,51.171 81.832,51.177 80.495,49.835 79.16,48.493 79.154,46.312 80.482,44.963L86.312,39.05 80.476,33.131C79.159,31.793 79.176,29.624 80.516,28.288 81.855,26.952 84.008,26.955 85.326,28.294L91.122,34.172 96.93,28.282 96.93,28.282z" />
+                    </DrawingGroup>
+                </DrawingGroup>
+            </DrawingImage.Drawing>
+        </DrawingImage>
+        <DrawingImage x:Key="ErrorImage">
+            <DrawingImage.Drawing>
+                <DrawingGroup ClipGeometry="M0,0 V192 H240 V0 H0 Z">
+                    <DrawingGroup Opacity="1">
+                        <GeometryDrawing Brush="#FF000000" Geometry="F1 M240,192z M0,0z M0,12C0,5.3726,5.3721,0,12,0L228,0C234.627,0,240,5.3726,240,12L240,180C240,186.627,234.627,192,228,192L12,192C5.3721,192,0,186.627,0,180L0,12z" />
+                        <GeometryDrawing Brush="#FF000000" Geometry="F1 M240,192z M0,0z M120,96" />
+                    </DrawingGroup>
+                    <DrawingGroup Opacity="1">
+                        <GeometryDrawing Brush="#FFFFFFFF">
+                            <GeometryDrawing.Geometry>
+                                <EllipseGeometry RadiusX="116" RadiusY="92" Center="120,96" />
+                            </GeometryDrawing.Geometry>
+                        </GeometryDrawing>
+                        <GeometryDrawing Brush="#FFFFFFFF" Geometry="F1 M240,192z M0,0z M120,96" />
+                    </DrawingGroup>
+                    <DrawingGroup Opacity="1">
+                        <GeometryDrawing Brush="#FF000000" Geometry="F1 M240,192z M0,0z M68.614,119.67L68.614,142.836 54.886,142.836 54.886,119.67 15.132,119.67 15.132,109.946 54.886,47.026 68.614,47.026 68.614,106.8 74.334,106.8 74.334,119.67 68.614,119.67 M54.886,70.907L32.006,106.8 54.886,106.8 54.886,70.907" />
+                        <GeometryDrawing Brush="#FF000000" Geometry="F1 M240,192z M0,0z M147.99,94.789C147.98994,102.1297 147.56094,108.374 146.703,113.522 145.94027,118.67 144.5579,123.532 142.556,128.108 140.1726,133.828 137.1696,138.0227 133.547,140.692 130.0196,143.266 125.539,144.553 120.105,144.553 114.385,144.553 109.714,143.266 106.091,140.692 102.5636,138.0227 99.6083,133.828 97.225,128.108 95.223,123.4367 93.793,118.5747 92.935,113.522 92.17232,108.374 91.791,102.13 91.791,94.789 91.790992,87.5437 92.17232,81.347 92.935,76.199 93.79299,70.9557 95.223,66.046 97.225,61.47 99.7036,55.7501 102.7066,51.6508 106.234,49.172 109.8566,46.5981 114.4803,45.3111 120.105,45.311 125.6343,45.311097 130.163,46.5981 133.69,49.172 137.2173,51.6508 140.1726,55.8454 142.556,61.756 143.50927,64.1394 144.3196,66.5227 144.987,68.906 145.74961,71.2894 146.3216,73.8157 146.703,76.485 147.1796,79.0591 147.51327,81.8714 147.704,84.922 147.8946,87.8774 147.98994,91.1664 147.99,94.789 M134.834,94.789C134.83395,92.1197 134.7386,89.6887 134.548,87.496 134.4526,85.3034 134.26195,83.3014 133.976,81.49 133.78528,79.5834 133.49928,77.7721 133.118,76.056 132.73662,74.3401 132.30762,72.6241 131.831,70.908 130.5916,66.6181 129.0186,63.5197 127.112,61.613 125.3006,59.7064 122.965,58.7531 120.105,58.753 114.1943,58.753084 110.1426,62.7094 107.95,70.622 106.806,74.2447 105.9956,77.9151 105.519,81.633 105.13765,85.2557 104.94698,89.7364 104.947,95.075 104.94698,97.649 104.9946,100.0324 105.09,102.225 105.28065,104.3224 105.47131,106.3244 105.662,108.231 105.94798,110.0424 106.28164,111.8537 106.663,113.665 107.04431,115.4764 107.47331,117.3354 107.95,119.242 110.1426,127.1547 114.1943,131.111 120.105,131.111 122.965,131.11102 125.3006,130.15768 127.112,128.251 129.0186,126.3444 130.5916,123.3414 131.831,119.242 132.40295,117.3354 132.8796,115.524 133.261,113.808 133.64228,111.9967 133.92828,110.1377 134.119,108.231 134.40495,106.3244 134.59562,104.3224 134.691,102.225 134.7863,100.0324 134.83395,97.5537 134.834,94.789" />
+                        <GeometryDrawing Brush="#FF000000" Geometry="F1 M240,192z M0,0z M213.29,119.67L213.29,142.836 199.562,142.836 199.562,119.67 159.808,119.67 159.808,109.946 199.562,47.026 213.29,47.026 213.29,106.8 219.01,106.8 219.01,119.67 213.29,119.67 M199.562,70.907L176.682,106.8 199.562,106.8 199.562,70.907" />
                     </DrawingGroup>
                 </DrawingGroup>
             </DrawingImage.Drawing>
