--- a/Multi-TCG-Deckbuilder/LoadPlugin.xaml
+++ b/Multi-TCG-Deckbuilder/LoadPlugin.xaml
@@ -59,6 +59,7 @@
                 <MenuItem x:Name="MenuItem_UpdateApp" Header="_Check Application Updates" Click="MenuItem_UpdateApp_Click"/>
             </MenuItem>
             <MenuItem Header="_About">
+                <MenuItem Header="_Preferences" Command="Properties" />
                 <MenuItem Header="_About Multi-TCG Deck Builder" Click="MenuItem_ProgramAbout_Click" />
             </MenuItem>
         </Menu>
